modified sign up page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -76,7 +76,7 @@
           
           <div class="etc-login-form">
             <p>Forgot your password? <a href="#">click here</a></p>
-            <p>New user? <a href="#">create new account</a></p>
+            <p>New user? <a href="/signup">create new account</a></p>
           </div>
 
         </form>
